# ziren-wasm-stark-verifier

./: .gitignore  Cargo.toml  README.md  ZIREN_WASM_VERIFIER.md  package.json  test-browser.html  test-node.mjs  test-serve.mjs
example/binaries/: 23143500_ZKM_160838.txt  23431300_ZKM_229325.txt
example/eth_wasm/: main.js  package.json
example/guest/: Cargo.toml
example/guest/src/: main.rs
example/host/: Cargo.toml  build.rs
example/host/src/: main.rs
example/json/: fibonacci_groth16_proof.json  fibonacci_plonk_proof.json  fibonacci_stark_proof.json
example/wasm_example/: main.js
verifier/: Cargo.toml
verifier/src/: lib.rs
