[package]
name = "zkm-wasm-verifier"
description = "A rust verifier for BN254 curve"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark"]
categories = ["cryptography"]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md"]
edition = "2021"
version = "1.0.0"

[dependencies]
zkm-verifier.workspace = true
wasm-bindgen = "0.2"

# This is necessary for the wasm-bindgen.
[lib]
crate-type = ["cdylib", "rlib"]
