[package]
name = "ziren-wasm-stark-verifier"
edition = "2021"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkm-verifier.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"

# Console logging for debugging
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

# Optimize release builds
[profile.release]
opt-level = "s"
lto = true
